# aws-analytics-python

./: README.md  http_request.py  pyproject.toml  requirements.txt
cloudformation/: cloudformation.py
config/kafka-connectors/: README.md  postgre_connector.config
msk/: list.py  mongo_connector.config  producer.py
neptune/: ingest.py  main.py
opensearch/: generate.py  opensearch_indexing.py  opensearch_knn.py
rds/: insert_pg.py
scripts/: http_request.py  kafka_consumer.py  kds_consumer.py  kds_producer.py  lakeformation_migration.py  msk_load_test.py  neptune_graph_ops.py  neptune_test.py  opensearch_indexing.py  putrecord_firehose.py  rds_data_generator.py  rds_mysql_insert.py
src/aws_analytics/: __init__.py
src/aws_analytics/config/: settings.py
src/aws_analytics/services/: __init__.py  kinesis_service.py  lakeformation_service.py  msk_service.py  neptune_service.py  opensearch_service.py  rds_service.py
src/aws_analytics/utils/: __init__.py  aws_auth.py  logger.py
