[project]
name = "aws-analytics-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-msk-iam-sasl-signer-python>=1.0.2",
    "boto3>=1.39.3",
    "faker>=37.5.3",
    "gremlinpython>=3.7.3",
    "kafka-python>=2.2.15",
    "numpy>=2.3.2",
    "opensearch-py>=3.0.0",
    "packaging>=25.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests-aws4auth>=1.3.1",
]
